# architecture-graph-skill

./: .gitignore  README.md  SKILL.md  architecture.html  architecture.md  pyproject.toml
README/: architecture-v0.4.0.md
agents/: openai.yaml
references/: agent-usage.md
scripts/architecture_graph/: __init__.py  analysis.py  analysis_types.py  canonical.py  capabilities.py  claims.py  cli.py  config.py  corpus.py  decision_candidates.py  decisions.py  entities.py  errors.py  fingerprint.py  indexer.py  jsonl_store.py  nlp.py  overlay_contract.py  overlay_queries.py  overlay_snapshot.py  overlay_types.py  paging.py  project.py  qualifiers.py  query.py  ranking.py  rationale_resolver.py  rationale_rules.py  records.py  relations.py  report.py  schemas.py  semantic_graph.py  semantic_queries.py  snapshot.py  sources.py  (+2 more)
tests/: __init__.py  conftest.py  test_analysis.py  test_analysis_types.py  test_architecture_documentation.py  test_canonical.py  test_capabilities.py  test_claims.py  test_cli_smoke.py  test_corpus.py  test_decisions.py  test_jsonl_store.py  test_markdown_ingest.py  test_markdown_ingest_regressions.py  test_nlp.py  test_other_ingest.py  test_overlay_contract.py  test_overlay_queries.py  test_overlay_snapshot.py  test_phase1_cli.py  test_phase2_cli.py  test_phase2_golden.py  test_phase2_publication.py  test_query.py  test_ranking.py  test_rationale_cli.py  test_rationale_regression.py  test_rationale_resolver.py  test_relations.py  test_report.py  test_semantic_graph.py  test_semantic_queries.py  test_snapshot.py  test_sources.py  test_terms.py
(+48 files in other folders)
