[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "architecture-graph-skill"
dynamic = ["version"]
description = "Deterministic-first architecture decision graph skill."
requires-python = ">=3.12,<3.13"
dependencies = [
  "jmespath>=1.1,<2",
  "jsonlines>=4.0,<5",
  "PyYAML>=6.0,<7",
]

[dependency-groups]
dev = ["pytest>=9.1,<10"]

[project.scripts]
architecture-graph = "architecture_graph.cli:main"

[tool.setuptools]
package-dir = {"" = "scripts"}

[tool.setuptools.dynamic]
version = {attr = "architecture_graph.__version__"}

[tool.setuptools.packages.find]
where = ["scripts"]

[tool.setuptools.package-data]
architecture_graph = ["resources/*.json"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["scripts"]
testpaths = ["tests"]
